@startuml
package "Administración de usuarios" {
  class Perfil {
    - nombre: String
    - apellido: String
    - correo: String
    - contrasenia: String
    - estadoCuenta: String
    - fechaRegistro: Date
    - foto: String
  }

  class Usuario {
    - preferenciasMusicales: List<GeneroDTO>
    + actualizarPerfil(PerfilDTO perfil, boolean borrarPreferencias, List<GeneroDTO> nuevosGeneros): boolean
    + {static} preferenciasToJSON(List<GeneroDTO> preferenciasMusicales): String
    + {static}  preferenciasFromJSON(String json): List<GeneroDTO>
  }

  class Administrador {
    + consultarUsuarios(): List<PerfilDTO>
    + activarCuenta(usuario: PerfilDTO): void
    + desactivarCuenta(usuario: PerfilDTO): void
    + cambiarTipoUsuario(usuario: PerfilDTO, tipoUsuario: TipoUsuario): void
    + eliminarCuenta(usuario: PerfilDTO): void
  }

  class ServicioPerfil {
    - perfilDAO: PerfilDAO
    - {static} encoder: BCryptPasswordEncoder
    + registrarUsuario(String nombre, String apellido, String correo, String contrasenia, String foto): void
    + autenticar(String correo, String contraseniaIngresada): PerfilDTO
  }
  Enum TipoUsuario {
  ADMINISTRADOR
  USUARIO
  }
  class Sesion {
    - usuarioActual: PerfilDTO
    - {static} sesion: Sesion
    + {static} getSesion(): Sesion
    + iniciarSesion(usarioLogueado: PerfilDTO): void
    + cerrarSesion(): void
    + obtenerUsuarioActual(): PerfilDTO
  }

  Enum Genero

  ServicioPerfil .> Perfil
  Usuario --|> Perfil
  Administrador --|> Perfil
  Usuario -> "*" Genero : preferenciasMusicales
  Perfil --> "1" TipoUsuario: tipoUsuario
  Sesion --> Perfil

}



@enduml
